<resources>
    <string name="app_name" translatable="false">GoEstetica</string>
    <string name="login">GoEstetica - Login</string>
    <string name="google_account">Utilize sua conta do Google</string>
    <string name="content_authority">com.tobiasandre.goestetica</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Salvar</string>
    <string name="action_attendance">Atencimento</string>
    <string name="action_option_selection">Selecione a opção desejada</string>
    <string name="action_confirmation">Confirmado</string>
    <string name="wellcome">Seja Bem Vindo, %s!</string>
    <string name="take_schedule">Adicione um Agendamento</string>
    <string name="retry">Tentar Novamente</string>
    <string name="error_login">Erro ao Efetuar o Login:</string>
    <string name="read_contacts">Lendo Lista de Contatos</string>
    <string name="date">Data:</string>
    <string name="price_default">0,00</string>
    <string name="qt_default">1</string>
    <string name="hr_default">1:00</string>
    <string name="duration">Duração : %s h</string>
    <string name="general_error">Erro :</string>
    <string name="save_sucess">Registro Salvo com Sucesso!</string>
    <string name="name">Nome :</string>
    <string name="type">Tipo:</string>
    <string name="image">Imagem</string>
    <string name="action_image_selection">Selecionar Imagem</string>
    <string name="action_take_picture">Tirar Foto</string>
    <string name="schedulings">Agendamentos:</string>
    <string name="confirmations">Confirmações:</string>
    <string name="time_available">Disponibilidade:</string>
    <string name="resume">Resumo Diário:</string>
    <string name="field_clear"></string>
    <string name="default_time_format">HH:mm</string>
    <string name="default_date_format">dd/MM/yyyy</string>
    <string name="default_value_format">0.00</string>
    <string name="default_boolean_true">true</string>
    <string name="default_boolean_false">false</string>
    <string name="default_time_session">60</string>
    <string name="default_empty_string"></string>

    <!-- Import Contact -->
    <string name="contact_name">Nome:</string>
    <string name="contact_phone">Telefone:</string>
    <string name="contact_email">Email:</string>
    <string name="contact_photo">Foto</string>
    <string name="checked">Marcado</string>
    <string name="import_contacts">Importar contatos</string>

    <!-- customer -->
    <string name="customer_name">Nome :</string>
    <string name="customer_phone">Fone Fixo :</string>
    <string name="customer_cellphone">Celular :</string>
    <string name="customer_email">Email :</string>
    <string name="customer_address">Endereço :</string>
    <string name="customer_default_payment">Pagamento:</string>
    <string name="customer_required">É Necessário Informar o Nome do Cliente!</string>

    <string name="treatment_name_required">É Necessário Informar o nome do Tratamento!</string>
    <string name="find">Pesquisa</string>
    <string name="schedule_date">Data :</string>
    <string name="schedule_time">Hora :</string>
    <string name="schedule_customer">Selecione o Cliente :</string>
    <string name="schedule_treatment">Selecione o Tratamento :</string>
    <string name="schedule_price">Preço :</string>
    <string name="schedule_session">Sessões :</string>
    <string name="btn_find_customer">Selecionar Cliente</string>
    <string name="btn_find_treatment">Selecionar Tratamento</string>
    <string name="confirmation">Confirmado?</string>
    <string name="run_report">Gerar Relatorio</string>
    <string name="image_gallery">Select Image From Gallery</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="camera_permission">CAMERA permission allows us to Access CAMERA app</string>

    <!-- Schedule List -->
    <string name="schedule_qt_session">Sessões : %s</string>
    <string name="schedule_vl_session">Valor : %s</string>
    <string name="schedule_confirmation">Confirmado!</string>
    <string name="schedule_not_confirmed">Não Confirmado</string>
    <string name="schedule_duration">Duração:</string>

    <string name="credit_card">Cartao de Credito</string>
    <string name="money">Dinheiro</string>

    <string name="scheduling">Agendamentos</string>
    <string name="treatments">Tratamentos</string>
    <string name="customers">Clientes</string>
    <string name="schedule">Agendar</string>
    <string name="reports">Relatorios \\ Graficos</string>

    <!-- Treatment -->
    <string name="treatment_name">Tratamento:</string>
    <string name="treatment_description">Descrição :</string>
    <string name="treatment_price">Valor :</string>

    <!-- Report -->
    <string name="report">Relatório:</string>
    <string name="report_result">Resultado:</string>
    <string name="report_type"></string>
    <string name="result_type"></string>
    <string name="graphics_item">Gráfico</string>
    <string name="dt_ini">Data Inicial:</string>
    <string name="dt_fin">Data Final</string>

    <!-- Sync -->
    <string name="init_sync">Sincronizando,AGUARDE!</string>
    <string name="sync_types">Sincronizando Tipos de Tratamento,AGUARDE!</string>
    <string name="sync_treatments">Sincronizando Tratamentos,AGUARDE!</string>
    <string name="sync_finish">Concluído!</string>

    <!-- SnackBar -->
    <string name="required_field">Campo Obrigatório!</string>

    <string-array name="navigation_drawer_items_array">
        <item>@string/scheduling</item>
        <item>@string/customers</item>
        <item>@string/treatments</item>
        <item>@string/schedule</item>
        <item>@string/reports</item>
    </string-array>

    <string-array name="payment_types">
        <item>@string/money</item>
        <item>@string/credit_card</item>
    </string-array>

    <string-array name="result_types">
        <item>Analitico</item>
        <item>Sintetico</item>
    </string-array>

    <string-array name="rel_types">
        <item>Listagem</item>
        <item>Gráfico</item>
    </string-array>

    <string-array name="treatment_types">
        <item>Facial</item>
        <item>Corporal</item>
    </string-array>


</resources>
