<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">


        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/dt_schedule"
            android:textAlignment="textStart"
            android:layout_marginStart="10dp"
            android:hint="@string/date"
            android:inputType="date"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/btnSetDate"
            android:layout_marginBottom="5dp"
            android:scaleType="centerCrop"
            android:background="@color/white"
            android:contentDescription="@string/date"
            android:src="@mipmap/ic_calendar"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textAlignment="textStart"
            android:id="@+id/hr_schedule"
            android:hint="@string/schedule_time"
            android:inputType="time"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/btnSetTime"
            android:background="@color/white"
            android:scaleType="centerCrop"
            android:contentDescription="@string/schedule_time"
            android:src="@mipmap/ic_clock"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">


        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/nm_customer"
            android:hint="@string/schedule_customer"
            android:inputType="textCapCharacters"/>

        <ImageButton
            android:layout_width="35dp"
            android:layout_height="32dp"
            android:layout_gravity="bottom"
            android:id="@+id/btn_find_customer"
            android:background="@color/white"
            android:scaleType="centerCrop"
            android:contentDescription="@string/btn_find_customer"
            android:src="@mipmap/ic_search" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">


        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/nm_treatment"
            android:hint="@string/schedule_treatment"
            android:inputType="textCapCharacters"/>

        <ImageButton
            android:layout_width="35dp"
            android:layout_height="32dp"
            android:layout_gravity="bottom"
            android:id="@+id/btn_find_treatment"
            android:background="@color/white"
            android:scaleType="centerCrop"
            android:contentDescription="@string/btn_find_treatment"
            android:src="@mipmap/ic_search" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/vl_price"
            android:textAlignment="textStart"
            android:hint="@string/schedule_price"
            android:inputType="numberDecimal"/>


        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/nr_sessions"
            android:textAlignment="textStart"
            android:hint="@string/schedule_session"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="40dp"
        android:gravity="start"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox_confirmed"
            android:layout_marginStart="5dp"
            android:text="@string/confirmation"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save_schedule"
            android:layout_marginStart="100dp"
            android:background="@color/white"
            android:scaleType="centerCrop"
            android:contentDescription="@string/action_save"
            android:src="@mipmap/ic_save_black"/>

    </LinearLayout>
</LinearLayout>