<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:gravity="end"
                android:labelFor="@+id/ed_treatment_name"
                android:text="@string/name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:gravity="center"
                android:labelFor="@+id/ed_treatment_description"
                android:text="@string/treatment_description"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_treatment_name"
                    android:inputType="textCapCharacters"
                    android:maxLength="60"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"/>

                <ImageButton
                    android:layout_width="35dp"
                    android:layout_height="32dp"
                    android:layout_gravity="bottom"
                    android:id="@+id/btn_find_treatment"
                    android:background="@color/white"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/find"
                    android:src="@mipmap/ic_search" />


            </LinearLayout>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ed_treatment_description"
                android:inputType="textCapCharacters"
                android:textSize="12sp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="end"
                android:labelFor="@+id/spnType"
                android:text="@string/type"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spnType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/treatment_types"></Spinner>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:gravity="end"
                android:labelFor="@+id/ed_treatment_price"
                android:text="@string/schedule_price"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:gravity="center"
                android:labelFor="@+id/ed_treatment_sessions"
                android:text="@string/schedule_session"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:gravity="center"
                android:labelFor="@+id/ed_treatment_duration"
                android:text="@string/schedule_duration"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ed_treatment_price"
                android:inputType="numberDecimal"
                android:text="@string/price_default"
                android:textAlignment="textEnd"
                android:textSize="12sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ed_treatment_sessions"
                android:inputType="number"
                android:text="@string/qt_default"
                android:textAlignment="center"
                android:textSize="12sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ed_treatment_duration"
                android:inputType="time"
                android:text="@string/hr_default"
                android:textAlignment="center"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:gravity="end|bottom"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_save_treatment"
                android:layout_marginBottom="15dp"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:contentDescription="@string/action_save"
                android:src="@mipmap/ic_save_black"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>