<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:scaleType="centerCrop"
            android:background="@color/black"
            android:src="@drawable/blank_profile_picture"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:textAlignment="textEnd"
                    android:textSize="12sp"
                    android:labelFor="@+id/ed_customer_name"
                    android:text="@string/customer_name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:textAlignment="textEnd"
                    android:textSize="12sp"
                    android:labelFor="@+id/ed_customer_cellphone"
                    android:text="@string/customer_cellphone"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textAlignment="textEnd"
                    android:textSize="12sp"
                    android:labelFor="@+id/ed_customer_phone"
                    android:text="@string/customer_phone"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textAlignment="textEnd"
                    android:textSize="12sp"
                    android:labelFor="@+id/ed_customer_email"
                    android:text="@string/customer_email"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textAlignment="textEnd"
                    android:textSize="12sp"
                    android:labelFor="@+id/ed_customer_address"
                    android:text="@string/customer_address"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:textAlignment="textEnd"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:labelFor="@+id/spnPaymentType"
                    android:text="@string/customer_default_payment"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/ed_customer_name"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:inputType="textCapCharacters"
                    android:maxLength="60"
                    android:textSize="12sp"
                    android:maxLines="1" />

                <EditText
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_customer_cellphone"
                    android:layout_marginStart="16dp"
                    android:maxLines="1"
                    android:textSize="12sp"
                    android:inputType="phone"/>

                <EditText
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_customer_phone"
                    android:layout_marginStart="16dp"
                    android:textSize="12sp"
                    android:maxLines="1"
                    android:inputType="phone"/>

                <EditText
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_customer_email"
                    android:inputType="textEmailAddress"
                    android:layout_marginStart="16dp"
                    android:textSize="12sp"
                    android:maxLines="1"/>

                <EditText
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_customer_address"
                    android:inputType="textPostalAddress"
                    android:layout_marginStart="16dp"
                    android:textSize="12sp"
                    android:maxLines="1"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/spnPaymentType"
                    android:entries="@array/payment_types"
                    android:layout_marginStart="16dp">

                </Spinner>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="35dp"
                    android:layout_height="32dp"
                    android:id="@+id/btn_find_customer"
                    android:background="@color/white"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/find"
                    android:src="@mipmap/ic_search" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_save_customer"
                android:background="@color/white"
                android:layout_marginEnd="36dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/action_save"
                android:src="@mipmap/ic_save_black"/>

        </LinearLayout>


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:src="@mipmap/ic_add_photo_customer"
        app:backgroundTint="@color/colorPrimary" />

</android.support.design.widget.CoordinatorLayout>